HH-121136 Remove guava usages